k8s/deploy-gz-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gz-web
  namespace: web
  labels:
    app: gz-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gz-web
  template:
    metadata:
      labels:
        app: gz-web
    spec:
      containers:
      - name: django-backend
        image: geekzone/backend:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}
        resources:
          limits:
            memory: "100Mi"
            cpu: 50m
          requests:
            memory: "50Mi"
            cpu: 30m
      - name: frontend-proxy
        image: geekzone/frontend:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            memory: "50Mi"
            cpu: 50m
          requests:
            memory: "30Mi"
            cpu: 30m

---
apiVersion: v1
kind: Service
metadata:
  name: gz-web-service
  namespace: web
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test.geek.zone
#    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  type: ClusterIP
  selector:
    app: gz-web
  ports:
  - port: 80
    targetPort: 8080
